feat: Update game board layout and player names  fix the one turn bug , reset the game after finish , still have some work to do
#chore

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
             <section>
                 <h2>Game Board</h2>
                 <div id="game-board">
-                    <div id="player1-container">
+                    <div id="player-container">
                         <h2>Player 1</h2>
-                        <div id="player1-board" class="board-container"></div>
+                        <div id="player-board" class="board-container"></div>
                     </div>
-                    <div id="player2-container">
+                    <div id="computer-container">
                         <h2>Player 2</h2>
-                        <div id="player2-board" class="board-container"></div>
+                        <div id="computer-board" class="board-container"></div>
                     </div>
                 </div>
             </section>
